--- a/base.css
+++ b/base.css
@@ -9,7 +9,36 @@ header {
     height: 100%;
     width: 200px;
 }
+.header-design {
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 200px;
+    background-color: #66b2b2;
+}
 .content {
     margin-left: 200px;
     height: 10000px;
+}
+ul {
+    list-style-type: none;
+    padding: 20px;
+    border-radius: 5px;
+    font-family: 'Fjalla One', sans-serif;
+}
+li a {
+    padding: 10px;
+    text-decoration: none;
+    color:  #317873;
+    display: inline-block; 
+    font-size: 25px;
+}
+li a:hover {
+        color:	#83d0c9;
+}
+.image-holder img {
+    width: 100%;
+    margin: 0;
+
 }
