--- a/base.css
+++ b/base.css
@@ -21,11 +21,11 @@ header {
 }
 .content {
     margin-left: 200px;
-    height: 10000px;
+
 }
 .content-design {
     background-color: #c9d1c5;
-    height: 10000px;
+    min-height: 100vh;
 }
 ul {
     list-style-type: none;
@@ -59,7 +59,7 @@ h1 {
 }
 p {
     text-align: justify;
-    font-size: 15px;
+    font-size: 20px;
     font-family: 'Unica One', cursive;
     color: #41676e;
     margin: 25px;
