--- a/base.css
+++ b/base.css
@@ -50,10 +50,10 @@ ul.main-menu li:not(:last-child)::after {
         height: 1px;
         background-color: rgba(255,255,255,0.5);
 }
-.image-holder img {
+.image-holder img {   
     width: 100%;
     margin: 0;
-
+    padding: 0;
 }
 h1 {
     display: block;
@@ -107,4 +107,15 @@ p.tour {
     color: #41676e;
     margin: 25px;
     padding: 0;
+}
+ul.tour-list {
+    list-style: none;
+    color: #41676e;
+    margin: 40px;
+    padding: 40px;
+}
+ul.tour-list li {
+    margin: 5px;
+    padding: 5px;
+    font-size: 30px;
 }
